methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:10: error: Missing closing brace `}' assumed here
   }
   ^